# homesite

./: .gitignore  .travis.yml  Cargo.toml  rustfmt.toml
scss/: home.scss  kratsbox.scss  lila.scss
src/: build.rs  main.rs  ructe_response.rs
static/: promocyjaregularkaj.eot
templates/: error.rs.html  gifta.rs.html  image.rs.html  index.rs.html
