[package]
name = "homesite"
version = "0.1.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"
build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.8.0", features = ["sass", "mime03", "warp"] }

[dependencies]
warp = "0.1.15"
mime = "0.3.0"
log = "*"
env_logger = "*"
chrono = "*"
