[package]
name = "homesite"
version = "0.1.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"
build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.16.1", features = ["sass"] }

[dependencies]
brotli = "3.3.4"
env_logger = "0.10.0"
flate2 = "1.0.25"
http = "0.2.8"
log = "0.4.17"
