[package]
name = "homesite"
authors = ["Rasmus Kaj <kaj@kth.se>"]
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[build-dependencies]
ructe = { version = "0.17.0", features = ["sass"] }

[dependencies]
brotli = "3.4.0"
env_logger = "0.11.1"
flate2 = "1.0.28"
http = "1.0.0"
log = "0.4.20"
